Mapping benchmarks: what parse and build cost, against a hand-written mapper and MapStruct
A JMH benchmark measures the generated mapper against the alternatives a
team already has: a hand-written mapper that throws on the first problem,
MapStruct, and MapStruct behind Bean Validation. Two pairs, a nested order
from the book's order-service cast and a flat ten-field record, each
measured for build, a valid parse, and a parse of a wire with five bad
fields. The benchmark checks its own fixtures in its setup, so a broken
fixture fails the run rather than measuring the wrong thing.

MapStruct 1.6.3 and Hibernate Validator 9.0.1.Final join the catalogue
for the benchmark source set only. The benchmarks page lists the new class
and says how to run it, quickly through Gradle or rigorously from the jar.